# dozerai

./: .editorconfig  .gitignore  bot.py  config.py  dashboard.py  dozer.session.sql  pyproject.toml  requirements.txt
aibot/: gemini.py
commands/: ask.py  dashboard.py  imgprocess.py  profile.py  rate.py  redeem.py  start.py  test.py  token.py  update.py
helper/: async_sqlite.py  imgsaver.py  mdconverter.py  msg_sender.py  scheduler.py
static/assets/css/: main.css  reset.min.css
static/assets/js/: dashboard.js  detail-img.js  list-imgs.js  pages.js
templates/: base.html.jinja  dashboard.html  dashboard.html.jinja  home.html  image-detail.html.jinja
webapp/: home.py  update.py
webapp/api/: images.py
webapp/helper/: auth.py
